--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,34 +1,25 @@
-<div class="flex h-screen">
-    <!-- Sidebar -->
-    <div 
-        class="bg-white text-white w-64 space-y-6  fixed inset-y-0 left-0 transform transition-all ease-in-out duration-300 z-10" 
-        [ngClass]="{
-            '-translate-x-full': !isSidebarOpen && isMobile,
-            'translate-x-0 lg:translate-x-0': isSidebarOpen || !isMobile
-        }">
-        <div class="flex items-center justify-between w-full">
-            <h2 class="text-xl font-bold">Sidebar</h2>
-            <button (click)="toggleSidebar()" class="lg:hidden text-white">X</button>
-        </div>
-
-        <ul class="mt-6">
-            <li class="border-b border-t border-gray-300">
-                <a href="#" class="block p-2 hover:bg-green-700 hover:text-white w-full text-black text-center">All Medicine</a>
-              </li>
-              <li class="border-b border-t">
-                <a href="#" class="block p-2 hover:bg-green-700 hover:text-white w-full text-black text-center">All Medicine</a>
-              </li>
-              <li class="border-b border-t">
-                <a href="#" class="block p-2 hover:bg-green-700 hover:text-white w-full text-black text-center">All Medicine</a>
-              </li>
-              <li class="border-b border-t">
-                <a href="#" class="block p-2 hover:bg-green-700 hover:text-white w-full text-black text-center">All Medicine</a>
-              </li>
-        </ul>
-    </div>
-
-    <!-- Main content -->
-    <div class="flex-1 p-6 transition-all duration-300" [ngClass]="{'ml-64': isSidebarOpen || !isMobile}">
-        <button (click)="toggleSidebar()" class="p-2 bg-gray-800 text-white rounded mb-4 lg:hidden">☰</button>
-    </div>
+<div 
+  class="bg-white text-black w-64 fixed space-y-6 inset-y-0 left-0 transform transition-all ease-in-out duration-300 z-10"
+  [ngClass]="{
+    '-translate-x-full': !isSidebarOpen && isMobile,
+    'translate-x-0 lg:translate-x-0': isSidebarOpen || !isMobile
+  }">
+  <div class="flex items-center justify-between w-full p-4 mr-12 mb-8">
+    <h2 class="text-xl font-bold"></h2>
+  </div>
+  
+  <ul class="mt-6">
+    <li class="border-b border-t border-gray-300">
+      <a href="#" class="block p-2 hover:bg-green-700 hover:text-white w-full text-black text-center">All Medicine</a>
+    </li>
+    <li class="border-b border-t">
+      <a href="#" class="block p-2 hover:bg-green-700 hover:text-white w-full text-black text-center">All Medicine</a>
+    </li>
+    <li class="border-b border-t">
+      <a href="#" class="block p-2 hover:bg-green-700 hover:text-white w-full text-black text-center">All Medicine</a>
+    </li>
+    <li class="border-b border-t">
+      <a href="#" class="block p-2 hover:bg-green-700 hover:text-white w-full text-black text-center">All Medicine</a>
+    </li>
+  </ul>
 </div>
