--- a/src/app/mother/mother.component.html
+++ b/src/app/mother/mother.component.html
@@ -8,11 +8,26 @@
 
                 <div class="bg-white w-full h-full">
 
-                    <div class="text-primary-content  flex items-center justify-center">
-                        <input type="text" placeholder="Type here" class="mt-4 mb-4 bg-white input input-bordered w-full max-w-xs" />
+                    <div class="text-primary-content flex items-center justify-center">
+                        <div class="relative w-full max-w-xs mt-4 mb-4">
+                            <label class="input input-bordered flex items-center gap-2">
+                                <svg
+                                  xmlns="http://www.w3.org/2000/svg"
+                                  viewBox="0 0 16 16"
+                                  fill="currentColor"
+                                  class="h-4 w-4 opacity-70 text-black">
+                                  <path
+                                    fill-rule="evenodd"
+                                    d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06l-2.755-2.754ZM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Z"
+                                    clip-rule="evenodd" />
+                                </svg>
+
+                                <input type="text" class="grow" placeholder="Search" />
+                                
+                              </label>
+                        </div>
                     </div>
-
-
+                    
                     <div>
 
                         <div class="flex justify-between ">
@@ -27,21 +42,9 @@
                                 <div>
                                     <p>Total Medicine (250)</p>
                                 </div>
-                                <div class="relative border rounded px-3 py-2 w-48 cursor-pointer bg-white">
-                                    <button id="dropdownButton" class="flex justify-between items-center w-full">
-                                        <span>Select a Brand</span>
-                                        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
-                                        </svg>
-                                    </button>
-                                    <div id="dropdownMenu" class="absolute left-0 mt-2 w-full bg-white border rounded shadow-lg hidden">
-                                        <ul>
-                                            <li class="px-4 py-2 cursor-pointer hover:bg-gray-200">Brand 1</li>
-                                            <li class="px-4 py-2 cursor-pointer hover:bg-gray-200">Brand 2</li>
-                                            <li class="px-4 py-2 cursor-pointer hover:bg-gray-200">Brand 3</li>
-                                        </ul>
-                                    </div>
-                                </div>                            
+                                <div>
+                                    <app-selector></app-selector>
+                                </div>                          
                         
                                 
                             </div>
@@ -96,9 +99,12 @@
             </div>
             <div>
                 <!--right side end-->
+
+                <!--Left side card start-->
                 <div class="card bg-white text-primary-content w-full">
                     <div class="card-body"></div>
                 </div>
+                  <!--Left side card start-->
             </div>
         </div>
     </div>
