--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="bg-white text-primary-content w-fit h-fit border">
         <div class="px-4">
-          <h2 class="text-red-500 text-right">Out of stock!</h2>
+          <h2 class="text-red-500 text-right text-sm">Out of stock!</h2>
            <div>
             <div class="avatar">
                 <div class="w-12 rounded-full">
@@ -10,16 +10,16 @@
               </div>
            </div>
            <div class="">
-            <p >Peracetamol 50 mg</p>
+            <p class="text-sm text-black">Peracetamol 50 mg</p>
            </div>
           <div class="flex justify-between">
             <div>
-                <p>120 Tk</p>
+                <p class="text-sm text-black">120 Tk</p>
             </div>
 
-            <div>
-                <p>4</p>
-            </div>
+            <div class="flex justify-center items-center w-4 h-4 bg-red-500 text-white rounded-full ">
+              <p class="text-xs">4</p>
+          </div>
           </div>
         </div>
       </div>
