--- a/src/app/left-side/left-side.component.html
+++ b/src/app/left-side/left-side.component.html
@@ -25,16 +25,18 @@
                     <tr>
                         <td>1</td>
                         <td>Napa</td>
-                        <td>10</td>
+                        <td>
+                            <select class="">
+                                <option disabled selected class="">pcs</option>
+                                <option>Han Solo</option>
+                                <option>Greedo</option>
+                              </select>
+                        </td>
                         <td>100</td>
                         <td>10</td>
                         <td>99</td>
-                        <td>300</td>
-                        <button class="btn btn-error btn-xs">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                            </svg>
-                        </button>
+                        <td>anik</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
                     </tr>
                     
                 </tbody>
