--- a/src/app/left-side/left-side.component.html
+++ b/src/app/left-side/left-side.component.html
@@ -25,20 +25,244 @@
                     <tr>
                         <td>1</td>
                         <td>Napa</td>
-                        <td>10</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
                         <td>100</td>
                         <td>10</td>
                         <td>99</td>
-                        <td>300</td>
-                        <button class="btn btn-error btn-xs">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                            </svg>
-                        </button>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Napa</td>
+                        <td>
+                            <div class="select-wrapper">
+                                <select class="custom-select">
+                                    <option disabled selected>pcs</option>
+                                    <option>Box</option>
+                                    <option>Strip</option>
+                                    <option>Pcs</option>
+                                </select>
+                            </div>
+                        </td>
+                        <td>100</td>
+                        <td>10</td>
+                        <td>99</td>
+                        <td>200</td>
+                       <td><i class="fa-solid fa-trash-can"></i></td>
                     </tr>
                     
                 </tbody>
             </table>
+        </div>
+    </div>
+
+    <div class="mt-4">
+        <div class="flex items-center justify-between gap-4">
+            <div class="flex items-center gap-2">
+                <div class="text-gray-600">
+                    <p>Subtotal</p>
+                </div>
+
+                <div class="font-medium bg-gray-100 p-2 rounded-lg shadow-sm w-fit text-center">
+                    <p>TK 600.00</p>
+                </div>
+            </div>
+
+            <div class="flex items-center gap-2">
+                <div class="text-gray-600">
+                    <p>Discount</p>
+                </div>
+
+                <div class="font-medium bg-gray-100 p-2 rounded-lg shadow-sm w-fit text-center">
+                    <p>TK 00.00</p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
