--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="bg-white text-primary-content w-fit h-fit border">
         <div class="px-4">
-          <h2 class="text-red-500 text-right text-sm">Out of stock!</h2>
+          <h2 class="text-red-500 text-right text-sm mt-2">Out of stock!</h2>
            <div>
             <div class="avatar">
                 <div class="w-12 rounded-full">
@@ -9,10 +9,10 @@
                 </div>
               </div>
            </div>
-           <div class="">
+           <div class="mb-2">
             <p class="text-sm text-black">Peracetamol 50 mg</p>
            </div>
-          <div class="flex justify-between">
+          <div class="flex justify-between mb-4">
             <div>
                 <p class="text-sm text-black">120 Tk</p>
             </div>
