--- a/src/app/left-side/left-side.component.html
+++ b/src/app/left-side/left-side.component.html
@@ -243,13 +243,13 @@
     </div>
 
     <div class="mt-4">
-        <div class="flex items-center justify-between gap-4">
+        <div class="grid grid-cols-2 gap-2">
             <div class="flex items-center gap-2">
                 <div class="text-gray-600">
                     <p>Subtotal</p>
                 </div>
 
-                <div class="font-medium bg-gray-100 p-2 rounded-lg shadow-sm w-fit text-center">
+                <div class="font-medium bg-gray-100 p-2 rounded-lg shadow-sm w-full text-center">
                     <p>TK 600.00</p>
                 </div>
             </div>
@@ -259,8 +259,28 @@
                     <p>Discount</p>
                 </div>
 
-                <div class="font-medium bg-gray-100 p-2 rounded-lg shadow-sm w-fit text-center">
+                <div class="font-medium bg-gray-100 p-2 rounded-lg shadow-sm w-full text-center">
                     <p>TK 00.00</p>
+                </div>
+            </div>
+
+            <div class="flex items-center gap-2">
+                <div class="text-gray-600">
+                    <p>Subtotal</p>
+                </div>
+
+                <div class="font-medium bg-gray-100 p-2 rounded-lg shadow-sm w-full text-center">
+                    <p>TK 600.00</p>
+                </div>
+            </div>
+
+            <div class="flex items-center gap-2">
+                <div class="text-gray-600">
+                    <p>Discount</p>
+                </div>
+
+                <div class="font-medium p-2 rounded-lg shadow-sm w-full text-center">
+                    <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
                 </div>
             </div>
         </div>
