--- a/src/app/mother/mother.component.html
+++ b/src/app/mother/mother.component.html
@@ -1,6 +1,9 @@
 <div class="">
-    <div class="border border-b w-full h-24 bg-white"></div>
-
+    
+    <div class="mb-4">
+        <app-header></app-header>
+    </div>
+    
     <div class="px-[20px]">
         <div class="grid grid-cols-2 gap-2">
             <div>
@@ -12,5 +15,11 @@
             </div>
                 
         </div>
+    </div>
+
+    <div class="px-[20px] bg-white">
+        
+        <app-footer></app-footer>
+        
     </div>
 </div>
